--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:UuP8rUl44//jBBmgA2vZLxdDXKTAP6lftDps+xA1E1A=
 APP_DEBUG=true
-APP_URL=http://localhost
 
 LOG_CHANNEL=telegram
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,8 +11,8 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHANNEL_ID=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
